  they are now searched relative to the given `config.py` file.
- `navigate prev` (`[[`) and `navigate next` (`]]`) now recognize links with
  `nav-prev` and `nav-next` classes, such as those used by the Hugo static site
  generator.
- When `tabs.favicons` is disabled but `tabs.tabs_are_windows` is set, the
  window icon is still set to the page's favicon now.

Added
~~~~~

- `:undo` now has a new `-w` / `--window` argument, which can be used to
  restore closed windows (rather than tabs). This is bound to `U` by default.
- `:jseval` can now take `javascript:...` URLs via a new `--url` flag.
- New replacement `{aligned_index}` for `tabs.title.format` and `format_pinned`
  which behaves like `{index}`, but space-pads the index based on the total
  numbers of tabs. This can be used to get aligned tab texts with vertical
  tabs.
- New command `:devtools-focus` (bound to `wIf`) to toggle keyboard focus
  between the devtools and web page.
- The `--target` argument to qutebrowser now understands a new `private-window`
  value, which can be used to open a private window in an existing instance
  from the commandline.
- The `:download-open` command now has a new `--dir` flag, which can be used to
  open the directory containing the downloaded file. An entry to do the same
  was also added to the context menu.
- Messages are now wrapped when they are too long to be displayed on a single line.

Fixed
~~~~~

- A URL pattern with a `*.` host was considered valid and matched all hosts.
  Due to keybindings like `tsH` toggling scripts for `*://*.{url:host}/*`,
  invoking them on pages without a host (e.g. `about:blank`) could result in
  accidentally allowing/blocking JavaScript for all pages. Such patterns are
  now considered invalid, with existing patterns being automatically removed
  from `autoconfig.yml`.
- When `scrolling.bar` was set to `overlay` (the default), qutebrowser would
  internally override any `enable-features=...` flags passed via `qt.args` or