@@ -46,10 +46,12 @@ class AsciiDoc:
     FILES = ['faq', 'changelog', 'contributing', 'quickstart', 'userscripts']
 
     def __init__(self,
-                 asciidoc: Optional[List[str]],
+                 asciidoc: Optional[str],
+                 asciidoc_python: Optional[str],
                  website: Optional[str]) -> None:
         self._cmd = None        # type: Optional[List[str]]
         self._asciidoc = asciidoc
+        self._asciidoc_python = asciidoc_python
         self._website = website
         self._homedir = None    # type: Optional[pathlib.Path]
         self._themedir = None   # type: Optional[pathlib.Path]
@@ -218,7 +220,9 @@ class AsciiDoc:
     def _get_asciidoc_cmd(self) -> List[str]:
         """Try to find out what commandline to use to invoke asciidoc."""
         if self._asciidoc is not None:
-            return self._asciidoc
+            python = (sys.executable if self._asciidoc_python is None
+                      else self._asciidoc_python)
+            return [python, self._asciidoc]
 
         for executable in ['asciidoc', 'asciidoc.py']:
             try:
@@ -270,10 +274,12 @@ def parse_args() -> argparse.Namespace:
     parser = argparse.ArgumentParser()
     parser.add_argument('--website', help="Build website into a given "
                         "directory.")
-    parser.add_argument('--asciidoc', help="Full path to python and "
-                        "asciidoc.py. If not given, it's searched in PATH.",
-                        nargs=2, required=False,
-                        metavar=('PYTHON', 'ASCIIDOC'))
+    parser.add_argument('--asciidoc', help="Full path to asciidoc.py. "
+                        "If not given, it's searched in PATH.",
+                        nargs='?')
+    parser.add_argument('--asciidoc-python', help="Python to use for asciidoc."
+                        "If not given, the current Python interpreter is used.",
+                        nargs='?')
     return parser.parse_args()
 
 
@@ -301,7 +307,8 @@ def main(colors: bool = False) -> None:
     utils.change_cwd()
     utils.use_color = colors
     args = parse_args()
-    run(asciidoc=args.asciidoc, website=args.website)
+    run(asciidoc=args.asciidoc, asciidoc_python=args.asciidoc_python,
+        website=args.website)
 
 
 if __name__ == '__main__':
